; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_options.c_format_child_class_next.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_options.c_format_child_class_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }
%struct.TYPE_7__ = type { i32* }

@ff_avio_class = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @format_child_class_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @format_child_class_next(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %4, align 8
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %5, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* @ff_avio_class, i32** %2, align 8
  br label %74

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %21, %9
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %12 = call %struct.TYPE_8__* @av_iformat_next(%struct.TYPE_8__* %11)
  store %struct.TYPE_8__* %12, %struct.TYPE_8__** %4, align 8
  %13 = icmp ne %struct.TYPE_8__* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %10
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = icmp eq i32* %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  br label %22

21:                                               ; preds = %14
  br label %10

22:                                               ; preds = %20, %10
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %24 = icmp ne %struct.TYPE_8__* %23, null
  br i1 %24, label %39, label %25

25:                                               ; preds = %22
  br label %26

26:                                               ; preds = %37, %25
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %28 = call %struct.TYPE_7__* @av_oformat_next(%struct.TYPE_7__* %27)
  store %struct.TYPE_7__* %28, %struct.TYPE_7__** %5, align 8
  %29 = icmp ne %struct.TYPE_7__* %28, null
  br i1 %29, label %30, label %38

30:                                               ; preds = %26
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = load i32*, i32** %3, align 8
  %35 = icmp eq i32* %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %30
  br label %38

37:                                               ; preds = %30
  br label %26

38:                                               ; preds = %36, %26
  br label %39

39:                                               ; preds = %38, %22
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %41 = icmp ne %struct.TYPE_7__* %40, null
  br i1 %41, label %58, label %42

42:                                               ; preds = %39
  br label %43

43:                                               ; preds = %56, %42
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %45 = call %struct.TYPE_8__* @av_iformat_next(%struct.TYPE_8__* %44)
  store %struct.TYPE_8__* %45, %struct.TYPE_8__** %4, align 8
  %46 = icmp ne %struct.TYPE_8__* %45, null
  br i1 %46, label %47, label %57

47:                                               ; preds = %43
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %48, i32 0, i32 0
  %50 = load i32*, i32** %49, align 8
  %51 = icmp ne i32* %50, null
  br i1 %51, label %52, label %56

52:                                               ; preds = %47
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 0
  %55 = load i32*, i32** %54, align 8
  store i32* %55, i32** %2, align 8
  br label %74

56:                                               ; preds = %47
  br label %43

57:                                               ; preds = %43
  br label %58

58:                                               ; preds = %57, %39
  br label %59

59:                                               ; preds = %72, %58
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %61 = call %struct.TYPE_7__* @av_oformat_next(%struct.TYPE_7__* %60)
  store %struct.TYPE_7__* %61, %struct.TYPE_7__** %5, align 8
  %62 = icmp ne %struct.TYPE_7__* %61, null
  br i1 %62, label %63, label %73

63:                                               ; preds = %59
  %64 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %65 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %64, i32 0, i32 0
  %66 = load i32*, i32** %65, align 8
  %67 = icmp ne i32* %66, null
  br i1 %67, label %68, label %72

68:                                               ; preds = %63
  %69 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %70 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %69, i32 0, i32 0
  %71 = load i32*, i32** %70, align 8
  store i32* %71, i32** %2, align 8
  br label %74

72:                                               ; preds = %63
  br label %59

73:                                               ; preds = %59
  store i32* null, i32** %2, align 8
  br label %74

74:                                               ; preds = %73, %68, %52, %8
  %75 = load i32*, i32** %2, align 8
  ret i32* %75
}

declare dso_local %struct.TYPE_8__* @av_iformat_next(%struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_7__* @av_oformat_next(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
